    * FIX: Edit view: couldn't edit filter settings
    * FIX: Fixed styling of links in multisite context help
    * FIX: Fixed "select all" button for IE
    * FIX: Context links added by hooks are now hidden by the display
           option "B" again
    * FIX: preselected "refresh" option did not reflect view settings
           but was simply the first available option - usually 30.

    WATO:
    * FIX: Fixed "select all" button in hosts & folders for IE
    * Optically mark modified variables in global settings
    * Swapped icons for rule match and previous rule match (makes for sense)

    Core:
    * FIX: Fixed "make_utf is not defined" error when having custom
           timeperiods defined in WATO

    Checks & Agents: 
    * MacOS X: Agent for MacOS (Thanks to Christian Zigotzky)
    * AIX: New check aix_multipath: Supports checking native AIX multipathing from AIX 5.2 onward
    * Solaris: New check solaris_multipath: Supports checking native Solaris multipath from Solaris10 and up.
    * Solaris: The ZFS Zpool status check now looks more closely at the reported messages. (It's also tested to work on Linux now)

1.2.0b5:
    Core:
    * FIX: handle UTF-8 encoded binary strings correctly (e.g. in host alias)
    * FIX: fix configuration of passive checks via custom_checks
    * Added NOTIFICATIONTYPE to host/service mail bodies

    WATO:
    * Site management: "disabled" only applies to Livestatus now
    * FIX: fix folding problems with dependent host tags
    * FIX: Detecting duplicate tag ids between regular tags and auxtags
    * FIX: Fixed layout problem of "new special rule" button in rule editor
    * FIX: Fixed layout problem on "activate changes" page
    * FIX: Added check if contacts belong to contactgroup before contactgroup deletion
    * FIX: fix site configuration for local site in Multisite environments
    * FIX: "(no not monitor)" setting in distributed WATO now works